# picoclaw2

./: .env.example  .gitignore  Cargo.toml  build-frontend.sh  dfx.json  package-lock.json  package.json
agent/: index.mjs  package.json
browser-server/: server.py
frontend/: dfinity.bundle.js  index.html
src/: frontend.html  lib.rs
src/backend/: lib.rs  picoclaw.did
src/frontend/: index.html  index.js  package.json  vite.config.js
