[package]
name = "picoclaw"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/backend/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.19"
ic-stable-structures = "0.6"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
hkdf = "0.12"
sha2 = "0.10"

[profile.release]
lto = true
opt-level = 'z'        # optimize for size
codegen-units = 1       # max optimization
strip = true            # strip debug symbols
